--- a/public/disclamer.html
+++ b/public/disclamer.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>TITLE</h1>
+      <h1>Disclaimer</h1>
       <div class="disclaimer">
         <p>
           The "riSCC" app is intended solely to support healthcare professionals
