--- a/public/disclaimer.html
+++ b/public/disclaimer.html
@@ -11,29 +11,32 @@
     <style>
       body {
         font-family: "Roboto", sans-serif;
-        margin: 0;
-        padding: 20px;
+        margin: 50px;
         color: #052243;
+        background-color: #e6e8ec;
       }
       .container {
         max-width: 800px;
-        margin: auto;
+        margin: 0px auto;
+        padding: 40px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
-      h1 {
+      h1,
+      h2 {
         color: #052243;
-        text-align: center;
+        margin-top: 0px;
       }
       p {
         line-height: 1.6;
       }
       .disclaimer {
-        background: #f9f9f9;
         border-radius: 10px;
-        padding: 20px;
         margin-top: 20px;
       }
       .footer {
-        margin-top: 20px;
+        margin-top: 60px;
         text-align: center;
         color: #888;
       }
@@ -41,7 +44,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>TITLE</h1>
+      <h2>Disclaimer</h2>
       <div class="disclaimer">
         <p>
           The "riSCC" app is intended solely to support healthcare professionals
@@ -81,16 +84,12 @@
       </div>
       <div class="footer">
         <a
-          href="https://risccfb.firebaseapp.com/userPrivacyPolicy.html"
+          href="userPrivacyPolicy.html"
           target="_blank"
+          style="display: inline-block; margin-right: 20px"
           >User Privacy Policy</a
         >
-        |
-        <a
-          href="https://risccfb.firebaseapp.com/PrivacyPolicy.html"
-          target="_blank"
-          >Privacy Policy</a
-        >
+        <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
       </div>
     </div>
   </body>
