--- a/public/PrivacyPolicy.html
+++ b/public/PrivacyPolicy.html
@@ -13,37 +13,36 @@
       }
       .container {
         max-width: 800px;
-        margin: 25px auto;
-        padding: 30px;
+        margin: 50px auto;
+        padding: 40px;
         background-color: #fff;
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
-      h2 {
-        color: #333;
-        font-size: 24px;
-        margin-top: 0;
-        margin-bottom: 10px;
-      }
       h2,
       h3,
-      h4,
       p {
         color: #052243;
         line-height: 1.5;
         margin-top: 0;
         margin-bottom: 15px;
       }
+      h4 {
+        color: #052243;
+        margin-bottom: 0;
+      }
       span {
         font-weight: bold;
       }
       ul {
-        list-style-type: disc;
-        margin-left: 20px;
+        list-style-type: none;
+        padding-left: 0;
       }
       a {
-        color: #007bff;
-        text-decoration: none;
+        color: #052243;
+        text-decoration: inherit;
+        font-weight: 600;
+        margin-bottom: 15px;
       }
       a:hover {
         text-decoration: underline;
@@ -152,31 +151,30 @@
           Review the privacy notice in full.
         </p>
         <br /><br />
-        <h3>TABLE OF CONTENTS</h3>
+        <h3 id="Go back">TABLE OF CONTENTS</h3>
         <br />
-        <h4>1. WHAT INFORMATION DO WE COLLECT?</h4>
-        <h4>2. HOW DO WE PROCESS YOUR INFORMATION?</h4>
-        <h4>
-          3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL
-          INFORMATION?
-        </h4>
-        <h4>4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h4>
-        <h4>5. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</h4>
-        <h4>6. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
-        <h4>7. HOW DO WE KEEP YOUR INFORMATION SAFE?</h4>
-        <h4>8. DO WE COLLECT INFORMATION FROM MINORS?</h4>
-        <h4>9. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
-        <h4>10. CONTROLS FOR DO-NOT-TRACK FEATURES</h4>
-        <h4>11. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
-        <h4>12. DO OTHER REGIONS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
-        <h4>13. DO WE MAKE UPDATES TO THIS NOTICE?</h4>
-        <h4>14. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h4>
-        <h4>
-          15. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM
-          YOU?
-        </h4>
+        <ul>
+            <li><a href="#1">1. WHAT INFORMATION DO WE COLLECT?</a></li><br>
+            <li><a href="#2">2. HOW DO WE PROCESS YOUR INFORMATION?</a></li><br>
+            <li><a href="#3">
+              3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION?
+            </a></li><br>
+            <li><a href="#4">4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</a></li><br>
+            <li><a href="#5">5. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</a></li><br>
+            <li><a href="#6">6. HOW LONG DO WE KEEP YOUR INFORMATION?</a></li><br>
+            <li><a href="#7">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</a></li><br>
+            <li><a href="#8">8. DO WE COLLECT INFORMATION FROM MINORS?</a></li><br>
+            <li><a href="#9">9. WHAT ARE YOUR PRIVACY RIGHTS?</a></li><br>
+            <li><a href="#10">10. CONTROLS FOR DO-NOT-TRACK FEATURES</a></li><br>
+            <li><a href="#11">11. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a></li><br>
+            <li><a href="#12">12. DO OTHER REGIONS HAVE SPECIFIC PRIVACY RIGHTS?</a></li><br>
+            <li><a href="#13">13. DO WE MAKE UPDATES TO THIS NOTICE?</a></li><br>
+            <li><a href="#14">14. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li><br>
+            <li><a href="#15">15. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</a></li>
+        </ul>
+        
         <br /><br />
-        <h4>1. WHAT INFORMATION DO WE COLLECT?</h4>
+        <h4 id="1">1. WHAT INFORMATION DO WE COLLECT?</h4>
         <br />
         <p>Personal information you disclose to us</p>
         <br />
@@ -296,7 +294,7 @@
           Services.
         </p>
         <br />
-        <h4>2. HOW DO WE PROCESS YOUR INFORMATION?</h4>
+        <h4 id="2">2. HOW DO WE PROCESS YOUR INFORMATION?</h4>
         <br />
         <p>
           In Short: We process your information to provide, improve, and
@@ -335,7 +333,7 @@
           vital interest, such as to prevent harm.
         </p>
         <br />
-        <h4>3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?</h4>
+        <h4 id="3">3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?</h4>
         <br />
         <p>
           In Short: We only process your personal information when we believe it
@@ -462,7 +460,7 @@
           regulations
         </p>
         <br />
-        <h4>4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h4>
+        <h4 id="4">4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h4>
         <br />
         <p>
           In Short: We may share information in specific situations described in
@@ -488,7 +486,7 @@
           Terms page.
         </p>
         <br />
-        <h4>5. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</h4>
+        <h4 id="5">5. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</h4>
         <br />
         <p>
           In Short: We may transfer, store, and process your information in
@@ -513,7 +511,7 @@
           notice and applicable law.
         </p>
         <br />
-        <h4>6. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
+        <h4 id="6">6. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
         <br />
         <p>
           In Short: We keep your information for as long as necessary to fulfill
@@ -539,7 +537,7 @@
           further processing until deletion is possible.
         </p>
         <br />
-        <h4>7. HOW DO WE KEEP YOUR INFORMATION SAFE?</h4>
+        <h4 id="7">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</h4>
         <br />
         <p>
           In Short: We aim to protect your personal information through a system
@@ -561,7 +559,7 @@
           within a secure environment.
         </p>
         <br />
-        <h4>8. DO WE COLLECT INFORMATION FROM MINORS?</h4>
+        <h4 id="8">8. DO WE COLLECT INFORMATION FROM MINORS?</h4>
         <br />
         <p>
           In Short: We do not knowingly collect data from or market to children
@@ -580,7 +578,7 @@
           please contact us at risccapplication@gmail.com.
         </p>
         <br />
-        <h4>9. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
+        <h4 id="9">9. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
         <br />
         <p>
           In Short: In some regions, such as the European Economic Area (EEA),
@@ -657,7 +655,7 @@
           email us at safas@sdfafasd.com.
         </p>
         <br />
-        <h4>10. CONTROLS FOR DO-NOT-TRACK FEATURES</h4>
+        <h4 id="10">10. CONTROLS FOR DO-NOT-TRACK FEATURES</h4>
         <br />
         <p>
           Most web browsers and some mobile operating systems and mobile
@@ -673,7 +671,7 @@
           notice.
         </p>
         <br />
-        <h4>11. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
+        <h4 id="11">11. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
         <br />
         <p>
           In Short: If you are a resident of California, Colorado, Connecticut,
@@ -1182,7 +1180,7 @@
           is denied, you may contact the Attorney General to submit a complaint.
         </p>
         <br />
-        <h4>12. DO OTHER REGIONS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
+        <h4 id="12">12. DO OTHER REGIONS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
         <br />
         <p>
           In Short: You may have additional rights based on the country you
@@ -1251,7 +1249,7 @@
           POPIAComplaints@inforegulator.org.za
         </p>
         <br />
-        <h4>13. DO WE MAKE UPDATES TO THIS NOTICE?</h4>
+        <h4 id="13">13. DO WE MAKE UPDATES TO THIS NOTICE?</h4>
         <br />
         <p>
           In Short: Yes, we will update this notice as necessary to stay
@@ -1268,7 +1266,7 @@
           frequently to be informed of how we are protecting your information.
         </p>
         <br />
-        <h4>14. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h4>
+        <h4 id="14">14. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h4>
         <br />
         <p>
           If you have questions or comments about this notice, you may email us
@@ -1281,12 +1279,12 @@
         <p>United States</p>
         <br />
         <p>&nbsp;</p>
-        <h4>
+        <h4 id="15">
           15. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM
           YOU?
         </h4>
-        <br />
-        <p>
+        <br/>
+        <p style="padding-bottom: 40px;">
           Based on the applicable laws of your country, you may have the right
           to request access to the personal information we collect from you,
           change that information, or delete it. To request to review, update,
@@ -1294,6 +1292,7 @@
           subject access request.
         </p>
       </div>
+      <a href="#Go back">GO BACK TO TABLE OF CONTENTS</p>
     </div>
   </body>
 </html>
