--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         transition: background-color 0.3s ease;
       }
       nav a:hover {
-        background-color: #888;
+        background-color: #697a8e;
       }
       section {
         padding: 20px;
@@ -52,7 +52,7 @@
         margin: 50px auto;
         padding: 20px;
         background-color: #fff;
-        border-radius: 5px;
+        border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
     </style>
