--- a/public/userPrivacyPolicy.html
+++ b/public/userPrivacyPolicy.html
@@ -9,34 +9,39 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f0f0f0;
+        background-color: #e6e8ec;
       }
       .container {
         max-width: 800px;
         margin: 50px auto;
-        padding: 20px;
+        padding: 40px;
         background-color: #fff;
-        border-radius: 5px;
+        border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
-      h1,
-      h2 {
-        color: #333;
-        font-family: "Arial Black", sans-serif;
+      h2,
+      h3,
+      p {
+        color: #052243;
+        line-height: 1.5;
+        margin-top: 0;
+        margin-bottom: 15px;
       }
-      p,
-      ul {
-        color: #000;
-        font-family: "Times New Roman", serif;
-        font-size: 16px;
-        line-height: 1.6;
+      h3 {
+        margin-top: 30px;
       }
       span {
         font-weight: bold;
       }
+      ul {
+        list-style-type: none;
+        padding-left: 0;
+      }
       a {
-        color: #007bff;
-        text-decoration: none;
+        color: #052243;
+        text-decoration: inherit;
+        font-weight: 600;
+        margin-bottom: 15px;
       }
       a:hover {
         text-decoration: underline;
@@ -53,7 +58,7 @@
         Policy outlines how we collect, use, and disclose information from users
         of the App.
       </p>
-      <h2>1. Information We Collect</h2>
+      <h3>1. Information We Collect</h3>
       <p>
         The App is designed to assist doctors and physicians in diagnosing skin
         cancer. To provide this service, we may collect the following types of
@@ -85,7 +90,7 @@
           </p>
         </li>
       </ul>
-      <h2>2. Use of Information</h2>
+      <h3>2. Use of Information</h3>
       <p>We may use the collected information for the following purposes:</p>
       <ul>
         <li>
@@ -108,7 +113,7 @@
           </p>
         </li>
       </ul>
-      <h2>3. Information Sharing</h2>
+      <h3>3. Information Sharing</h3>
       <p>
         We may share information collected from users in the following
         circumstances:
@@ -136,14 +141,14 @@
           </p>
         </li>
       </ul>
-      <h2>4. Data Security</h2>
+      <h3>4. Data Security</h3>
       <p>
         We take reasonable measures to protect the security and confidentiality
         of user information. However, no method of transmission over the
         internet or electronic storage is completely secure, and we cannot
         guarantee absolute security.
       </p>
-      <h2>5. Access and Control</h2>
+      <h3>5. Access and Control</h3>
       <p>
         Users may access, update, or delete their personal information stored in
         the App by contacting us at
@@ -153,14 +158,14 @@
         or by phone at 512-324-9650. However, please note that certain
         information may be retained for legal or legitimate business purposes.
       </p>
-      <h2>6. Changes to this Policy</h2>
+      <h3>6. Changes to this Policy</h3>
       <p>
         We reserve the right to update or modify this Policy at any time. Any
         changes will be effective immediately upon posting the revised Policy on
         the App. Users are encouraged to review this Policy periodically for any
         updates.
       </p>
-      <h2>7. Contact Us</h2>
+      <h3>7. Contact Us</h3>
       <p>
         If you have any questions or concerns about this Policy or our data
         practices, please contact us at:
