--- a/public/404.html
+++ b/public/404.html
@@ -9,7 +9,7 @@
       body {
         background: #eceff1;
         color: rgba(0, 0, 0, 0.87);
-        font-family: Arial, sans-serif;
+        font-family: "Roboto", sans-serif;
         margin: 0;
         padding: 0;
       }
