--- a/public/disclaimer.html
+++ b/public/disclaimer.html
@@ -19,8 +19,8 @@
         max-width: 800px;
         margin: 0px auto;
         padding: 40px;
-        background-color: #fff;
-        border-radius: 5px;
+        background-color: #ffffff;
+        border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
       h1,
@@ -32,7 +32,6 @@
         line-height: 1.6;
       }
       .disclaimer {
-        border-radius: 10px;
         margin-top: 20px;
       }
       .footer {
