--- a/public/userPrivacyPolicy.html
+++ b/public/userPrivacyPolicy.html
@@ -6,7 +6,7 @@
     <title>Privacy Policy Preview</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Roboto", sans-serif;
         margin: 0;
         padding: 0;
         background-color: #e6e8ec;
