resizable textarea in support.html and adding img to index.html

--- a/public/support.html
+++ b/public/support.html
@@ -38,6 +38,8 @@
         margin-bottom: 20px;
         border-radius: 8px;
         border-color: #b4bcc6;
+        border-width: 1px;
+        resize: vertical;
       }
       input[type="submit"] {
         background-color: #052243;
