--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
         background-color: #052243;
         color: #fff;
         padding: 10px 20px;
-        text-align: center;
+        justify-content: center;
+        display: flex;
       }
       nav {
         background-color: #364e68;
@@ -55,10 +56,18 @@
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
+      img {
+        float: left;
+        align-self: center;
+      }
+      h1 {
+        padding-left: 20px;
+      }
     </style>
   </head>
   <body>
     <header>
+      <img src="./Layer_1.png" alt="riSCC icon.png" />
       <h1>riSCC</h1>
     </header>
 
