--- a/public/disclaimer.html
+++ b/public/disclaimer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>riSCC App Disclaimer</title>
+    <title>riSCC</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -11,25 +11,48 @@
     <style>
       body {
         font-family: "Roboto", sans-serif;
-        margin: 50px;
-        color: #052243;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
         background-color: #e6e8ec;
+      }
+      header {
+        background-color: #052243;
+        color: #fff;
+        padding: 10px 20px;
+        justify-content: center;
+        display: flex;
+      }
+      nav {
+        background-color: #364e68;
+        padding: 10px;
+        text-align: center;
+      }
+      nav a {
+        color: #fff;
+        text-decoration: none;
+        padding: 8px 16px;
+        margin: 0 5px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+      }
+      nav a:hover {
+        background-color: #697a8e;
       }
       .container {
         max-width: 800px;
-        margin: 0px auto;
+        margin: 50px auto;
         padding: 40px;
-        background-color: #ffffff;
+        background-color: #fff;
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
-      h1,
       h2 {
         color: #052243;
         margin-top: 0px;
       }
       p {
-        line-height: 1.6;
+        line-height: 1.5;
       }
       .disclaimer {
         margin-top: 20px;
@@ -39,9 +62,26 @@
         text-align: center;
         color: #888;
       }
+      img {
+        float: left;
+        align-self: center;
+      }
+      h1 {
+        padding-left: 20px;
+      }
     </style>
   </head>
   <body>
+    <header>
+      <img src="./Layer_1.png" alt="riSCC icon.png" />
+      <h1>riSCC</h1>
+    </header>
+
+    <nav>
+      <a href="index.html">About</a>
+      <a href="disclaimer.html">Services</a>
+      <a href="support.html">Support</a>
+    </nav>
     <div class="container">
       <h2>Disclaimer</h2>
       <div class="disclaimer">
