--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>risCC</title>
+    <title>riSCC</title>
     <style>
       body {
         font-family: "Roboto", sans-serif;
@@ -19,7 +19,6 @@
         color: #052243;
         line-height: 1.5;
         margin-top: 0;
-        margin-bottom: 15px;
       }
       header {
         background-color: #052243;
@@ -44,14 +43,10 @@
       nav a:hover {
         background-color: #697a8e;
       }
-      section {
-        padding: 20px;
-        text-align: center;
-      }
       .container {
         max-width: 800px;
         margin: 50px auto;
-        padding: 20px;
+        padding: 40px;
         background-color: #fff;
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -63,6 +58,9 @@
       h1 {
         padding-left: 20px;
       }
+      #last {
+        margin-bottom: 0;
+      }
     </style>
   </head>
   <body>
@@ -73,8 +71,8 @@
 
     <nav>
       <a href="#">About</a>
-      <a href="disclaimer.html" target="_blank">Services</a>
-      <a href="support.html" target="_blank">Support</a>
+      <a href="disclaimer.html">Services</a>
+      <a href="support.html">Support</a>
     </nav>
 
     <div class="container">
@@ -89,7 +87,7 @@
         the doctors are presented with the risk of reoccurrence and select a
         proper treatment method.
       </p>
-      <p>
+      <p id="last">
         The app is free of charge, not looking into monetising the product.
         Funding supported through a grant.
       </p>
