--- a/public/support.html
+++ b/public/support.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>riSCC</title>
+    <link rel="stylesheet" href="styles.css" />
     <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        background-color: #e6e8ec;
-      }
       header {
         background-color: #052243;
         color: #fff;
@@ -96,11 +90,13 @@
 
     <nav>
       <a href="index.html">About</a>
-      <a href="disclaimer.html">Services</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="PrivacyPolicy.html">Privacy Policy</a>
+      <a href="userPrivacyPolicy.html">User Privacy Policy</a>
       <a href="support.html">Support</a>
     </nav>
     <div class="container">
-      <h1 id="contact">Contact Support</h1>
+      <h2 id="contact">Contact Support</h2>
       <form
         action="mailto:risccapplication@gmail.com"
         method="post"
