--- a/public/disclaimer.html
+++ b/public/disclaimer.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>riSCC</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="styles.css" />
     <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        background-color: #e6e8ec;
-      }
       header {
         background-color: #052243;
         color: #fff;
@@ -57,11 +47,6 @@
       .disclaimer {
         margin-top: 20px;
       }
-      .footer {
-        margin-top: 60px;
-        text-align: center;
-        color: #888;
-      }
       img {
         float: left;
         align-self: center;
@@ -79,7 +64,9 @@
 
     <nav>
       <a href="index.html">About</a>
-      <a href="disclaimer.html">Services</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="PrivacyPolicy.html">Privacy Policy</a>
+      <a href="userPrivacyPolicy.html">User Privacy Policy</a>
       <a href="support.html">Support</a>
     </nav>
     <div class="container">
@@ -120,15 +107,6 @@
           app disclaim any liability for damages arising from the use of the app
           or reliance on any information provided therein.
         </p>
-      </div>
-      <div class="footer">
-        <a
-          href="userPrivacyPolicy.html"
-          target="_blank"
-          style="display: inline-block; margin-right: 20px"
-          >User Privacy Policy</a
-        >
-        <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
       </div>
     </div>
   </body>
