--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>riSCC</title>
+    <link rel="stylesheet" href="styles.css" />
     <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        background-color: #e6e8ec;
-      }
       h2,
       h3,
       h4,
@@ -19,41 +13,6 @@
         color: #052243;
         line-height: 1.5;
         margin-top: 0;
-      }
-      header {
-        background-color: #052243;
-        color: #fff;
-        padding: 10px 20px;
-        justify-content: center;
-        display: flex;
-      }
-      nav {
-        background-color: #364e68;
-        padding: 10px;
-        text-align: center;
-      }
-      nav a {
-        color: #fff;
-        text-decoration: none;
-        padding: 8px 16px;
-        margin: 0 5px;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-      }
-      nav a:hover {
-        background-color: #697a8e;
-      }
-      .container {
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 40px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      img {
-        float: left;
-        align-self: center;
       }
       h1 {
         padding-left: 20px;
@@ -70,8 +29,10 @@
     </header>
 
     <nav>
-      <a href="#">About</a>
-      <a href="disclaimer.html">Services</a>
+      <a href="index.html">About</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="PrivacyPolicy.html">Privacy Policy</a>
+      <a href="userPrivacyPolicy.html">User Privacy Policy</a>
       <a href="support.html">Support</a>
     </nav>
 
